--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <textarea>00000000</textarea>
+    <button class: number>1</button>
+    <button class: number>2</button>
+    <button class: number>3</button>
+    <button class: number>4</button>
+    <button class: number>5</button>
+    <button class: number>6</button>
+    <button class: number>7</button>
+    <button class: number>8</button>
+    <button class: number>9</button>
+    <button class: number>0</button>
+
+    <button class: symbol>+</button>
+    <button class: symbol>-</button>
+    <button class: symbol>x</button>
+    <button class: symbol>/</button>
+    <button class: symbol>=</button>
+
+    <button class: clear>AC</button>
     <script src="script.js"></script>
   </body>
 </html>
