--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <textarea>00000000</textarea>
-    <button class: number>1</button>
-    <button class: number>2</button>
-    <button class: number>3</button>
-    <button class: number>4</button>
-    <button class: number>5</button>
-    <button class: number>6</button>
-    <button class: number>7</button>
-    <button class: number>8</button>
-    <button class: number>9</button>
-    <button class: number>0</button>
+    <textarea id="textArea">00000000</textarea>
+    <div id="allNumbers">
+      <button id="number" value="1">1</button>
+      <button id="number" value="2">2</button>
+      <button id="number" value="3">3</button>
+      <button id="number" value="4">4</button>
+      <button id="number" value="5">5</button>
+      <button id="number" value="6">6</button>
+      <button id="number" value="7">7</button>
+      <button id="number" value="8">8</button>
+      <button id="number" value="9">9</button>
+      <button id="number" value="0">0</button>
+    </div>
 
-    <button class: symbol>+</button>
-    <button class: symbol>-</button>
-    <button class: symbol>x</button>
-    <button class: symbol>/</button>
-    <button class: symbol>=</button>
+    <button id="symbol">+</button>
+    <button id="symbol">-</button>
+    <button id="symbol">x</button>
+    <button id="symbol">/</button>
+    <button id="symbol">=</button>
 
-    <button class: clear>AC</button>
+    <button id="erase">AC</button>
     <script src="script.js"></script>
   </body>
 </html>
