Add clear and backspace buttons and make them function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <textarea id="textArea">00000000</textarea>
+    <textarea id="textArea">0</textarea>
     <div id="allNumbers">
       <button id="number" value="1">1</button>
       <button id="number" value="2">2</button>
@@ -21,13 +21,17 @@
       <button id="number" value="0">0</button>
     </div>
 
-    <button id="symbol">+</button>
-    <button id="symbol">-</button>
-    <button id="symbol">x</button>
-    <button id="symbol">/</button>
-    <button id="symbol">=</button>
+    <div id="allSymbol">
+      <button id="symbol" value="+">+</button>
+      <button id="symbol" value="-">-</button>
+      <button id="symbol" value="*">x</button>
+      <button id="symbol" value="/">/</button>
+      <button id="symbol" value="=">=</button>
+    </div>
 
-    <button id="erase">AC</button>
+    <button id="clear">AC</button>
+    <button id="backSpace">Del</button>
+
     <script src="script.js"></script>
   </body>
 </html>
