Create a button for period and give functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <textarea id="textArea">0</textarea>
+    <div id="textArea">0</div>
     <div id="allNumbers">
       <button id="number" value="1">1</button>
       <button id="number" value="2">2</button>
@@ -19,6 +19,7 @@
       <button id="number" value="8">8</button>
       <button id="number" value="9">9</button>
       <button id="number" value="0">0</button>
+      <button id="number" class="decimal" value=".">.</button>
     </div>
 
     <div id="allSymbol">
